chore: add new logo and fix some spacing

--- a/app/assets/styles/components/stripe.css
+++ b/app/assets/styles/components/stripe.css
@@ -6,10 +6,10 @@
   font-weight: $weight-normal;
   line-height: $base-line-height;
   margin-bottom: 0;
-  padding: 1.5em 0;
+  padding: 1.5em 0.5em;
 
   @media screen and (width <= 480px) {
-    padding: 1em 0;
+    padding: 1em 0.5em;
   }
 
   p {
